Change:	added AutoResolution patch, by Lebidou (autoResolution branch). The main intention of this
		patch, is allowing native resolution after boot, even without graphics acceleration (qe/ci).
		The "side effect" is that it also enables native resolution at boot prompt (Gui).
		The con: doesn't work for all devices!!
		
		AutoResolution=y enables the patch.

  Note: Obviously, it only works in Graphics Mode (Gui).

  Note: resolution set on theme.plist is overriding the native one set by AutoResolution. For now the
		possible solutions are, remove the boot resolution (boot_width, boot_height) from theme.plist
		or add Graphics Mode=<native resolution> to com.appleBoot.plist.								reminder: ""

Motif:  ... mentioned above. Check the topic for more details:
		http://forum.voodooprojects.org/index.php/topic,1227.0.html

		---------------//---------------//---------------

- (starting at rev 480)
Change: added Meklort's Modules support, plus Kernel Patcher (Kpatcher) module.
		
		PatchKernel=y enables Kernel Patcher.
		
  Note: Check Modules.txt for more info.

Motif:  Testing Modules support.

		---------------//---------------//---------------
		
- (rev 520)
Change: removed -legacy flag interaction with the booter and reverted 32/64 flags to the trunk way.
		
		Type arch=i386 to load i386 kernel architecture.
		arch=x86_64 overrides i386 arch, if flagged on Boot.plist.
		On Snow type arch=i386 -legacy to load i386 arch Legacy Mode.

Motif:  don't want to contribute to confusion... and laziness ;)

		---------------//---------------//---------------
		
- (rev 524)
Change: Added GraphicsEnabler module. Needs no introduction :)
		Feedback is welcome.
		Working as usual with my ATI Radeon X1300, doing the injection thing.

  Newsflash: looks like it's raining modules over Meklort's branch :D

Motif:  ---

		---------------//---------------//---------------
		
- (rev )
Change:				template

Motif:

		---------------//---------------//---------------



Azimutz

